--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_movies",
   "version": "0.1.0",
+  "homepage": "http://magayoleg.github.io/react_movies",
   "private": true,
   "author": "Magay Oleg",
   "scripts": {
@@ -11,7 +12,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:jsx": "eslint --ext .jsx src",
-    "lint:jsx:fix": "eslint --ext .jsx src --fix"
+    "lint:jsx:fix": "eslint --ext .jsx src --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1"
   }
 }
